--- a/group-projects/spa/food/index.html
+++ b/group-projects/spa/food/index.html
@@ -4,10 +4,13 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title></title>
-	<link rel="stylesheet" href="">
+	<link rel="stylesheet" href="main.css">
 </head>
 <body>
-<div class="container" id="container">
+<div class="title-div">
+	<h1 class="title">PUPPY GRUB</h1>
+</div>
+<div class="dog-container" id="dog-container">
 	<article class="chuck" id="chuck">
 		<h1 class="chuck-h1" id="chuck-h1"></h1>
 		<section class="chuck-types" id="chuck-types">
