cat data organized into arrays

--- a/group-projects/spa/food/index.html
+++ b/group-projects/spa/food/index.html
@@ -42,6 +42,18 @@
 		</section>
 	</article>
 </div>
+<div class="cat-title-div">
+	<h1 class="cat-title">KITTY KITCHEN</h1>
+	<div class="cat-container" id="cat-container">
+		<article class="purrina" id="purrina">
+			<h1 class="purrina-h1" id="purrina-h1"></h1>
+			<h3 class="purrina-breeds" id="purrina-breeds"></h3>
+			<section class="purrina-types" id="purrina-types">
+				<h3 class="purrina-type1"></h3>
+			</section>
+		</article>
+	</div>
+</div>
 	<script src="food.js"></script>
 </body>
 </html>
