mostly done lunch beak

--- a/group-projects/spa/food/index.html
+++ b/group-projects/spa/food/index.html
@@ -43,13 +43,39 @@
 	</article>
 </div>
 <div class="cat-title-div">
-	<h1 class="cat-title">KITTY KITCHEN</h1>
+	<h1 class="cat-title">CAT CAFE</h1>
 	<div class="cat-container" id="cat-container">
 		<article class="purrina" id="purrina">
 			<h1 class="purrina-h1" id="purrina-h1"></h1>
 			<h3 class="purrina-breeds" id="purrina-breeds"></h3>
 			<section class="purrina-types" id="purrina-types">
-				<h3 class="purrina-type1"></h3>
+				<h3 class="purrina-type1" id="purrina-type1"></h3>
+					<div class="purrina-kitten-sizes" id="purrina-kitten-sizes">
+						<h4 class="purrina-kitten-1" id="purrina-kitten-1"></h4>
+						<h4 class="purrina-kitten-2" id="purrina-kitten-2"></h4>
+						<h4 class="purrina-kitten-3" id="purrina-kitten-3"></h4>
+					</div>
+				<h3 class = "purrina-type2" id="purrina-type2"></h3>
+					<div class="elite-sizes" id="elite-sizes">
+						<h4 clas="elite-1" id="elite-1"></h4>
+						<h4 class="elite-2" id="elite-2"></h4>
+					</div>
+			</section>
+		</article>
+		<article class="meow-meal" id="meow-meal">
+			<h1 class="meow-meal-h1" id="meow-meal-h1"></h1>
+			<h3 class="meow-meal-breeds" id="meow-meal-breeds"></h3>
+			<section class="meow-meal-types" id="meow-meal-types">
+				<h3 class="meow-meal-type1" id="meow-meal-type1"></h3>
+					<div class="meow-meal-kitten-sizes" id="meow-meal-kitten-sizes">
+						<h4 class="meow-meal-kitten-1" id="meow-meal-kitten-1"></h4>
+						<h4 class="meow-meal-kitten-2" id="meow-meal-kitten-2"></h4>
+					</div>
+				<h3 class = "meow-meal-type2" id="meow-meal-type2"></h3>
+					<div class="adult-sizes" id="adult-sizes">
+						<h4 clas="adult-1" id="adult-1"></h4>
+						<h4 class="adult-2" id="adult-2"></h4>
+					</div>
 			</section>
 		</article>
 	</div>
@@ -57,3 +83,9 @@
 	<script src="food.js"></script>
 </body>
 </html>
+
+
+
+
+
+
