--- a/group-projects/spa/food/index.html
+++ b/group-projects/spa/food/index.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" href="main.css">
 </head>
 <body>
+<!-- ******************* Dog Food Store ******************** -->
 <div class="title-div">
 	<h1 class="title">PUPPY GRUB</h1>
 </div>
@@ -42,6 +43,8 @@
 		</section>
 	</article>
 </div>
+
+<!-- ******************* Cat Food Store ******************** -->
 <div class="cat-title-div">
 	<h1 class="cat-title">CAT CAFE</h1>
 	<div class="cat-container" id="cat-container">
